<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:id="@android:id/tabcontent"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="5dp">
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:orientation="vertical" android:gravity="center" android:layout_weight="1" android:layout_height="0dp">
        <TextView android:layout_height="wrap_content" android:text="@string/yourLifepoints" android:id="@+id/text_you" android:gravity="center" android:layout_width="wrap_content" android:layout_gravity="left"></TextView>
        <TextView android:layout_gravity="center" android:layout_height="wrap_content" android:text="@string/num_8000" android:textSize="40sp" android:id="@+id/text_life" android:layout_width="match_parent" android:gravity="center" android:textStyle="bold"></TextView>
        <LinearLayout android:id="@+id/linearLayout4" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_gravity="center">
            <Button android:layout_gravity="center" android:layout_height="wrap_content" android:id="@+id/button1" android:text="@string/plus_1000" android:layout_weight="1" android:layout_width="0dp"></Button>
            <Button android:layout_gravity="center" android:layout_height="wrap_content" android:id="@+id/button2" android:text="@string/plus_500" android:layout_weight="1" android:layout_width="0dp"></Button>
            <Button android:layout_gravity="center" android:layout_height="wrap_content" android:id="@+id/button3" android:text="@string/plus_100" android:layout_weight="1" android:layout_width="0dp"></Button>
            <Button android:layout_height="wrap_content" android:id="@+id/button4" android:text="@string/plus_50" android:layout_gravity="right" android:layout_weight="1" android:layout_width="0dp"></Button>
        </LinearLayout>
        <LinearLayout android:id="@+id/LinearLayout5" android:layout_height="wrap_content" android:layout_width="match_parent">
            <Button android:text="@string/minus_1000" android:layout_height="wrap_content" android:layout_gravity="center" android:layout_weight="1" android:layout_width="0dp" android:id="@+id/button5"></Button>
            <Button android:text="@string/minus_500" android:id="@+id/button6" android:layout_height="wrap_content" android:layout_gravity="center" android:layout_weight="1" android:layout_width="0dp"></Button>
            <Button android:text="@string/minus_100" android:id="@+id/button7" android:layout_height="wrap_content" android:layout_gravity="center" android:layout_weight="1" android:layout_width="0dp"></Button>
            <Button android:text="@string/div_2" android:id="@+id/button8" android:layout_height="wrap_content" android:layout_gravity="center" android:layout_weight="1" android:layout_width="0dp"></Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@+id/LinearLayout3" android:orientation="vertical" android:layout_width="match_parent" android:layout_weight="1" android:layout_height="0dp">
        <TextView android:layout_height="wrap_content" android:text="@string/enemyLifepoints" android:id="@+id/text_opp" android:layout_width="wrap_content"></TextView>
        <TextView android:layout_height="wrap_content" android:text="@string/num_8000" android:textSize="40sp" android:id="@+id/text_opp_life" android:layout_gravity="center" android:layout_width="match_parent" android:gravity="center" android:textStyle="bold"></TextView>
        <LinearLayout android:id="@+id/LinearLayout6" android:layout_height="wrap_content" android:layout_width="match_parent">
            <Button android:layout_height="wrap_content" android:id="@+id/button01" android:text="@string/plus_1000" android:layout_width="0dp" android:layout_weight="1"></Button>
            <Button android:layout_height="wrap_content" android:id="@+id/button02" android:text="@string/plus_500" android:layout_width="0dp" android:layout_weight="1"></Button>
            <Button android:layout_height="wrap_content" android:id="@+id/button03" android:text="@string/plus_100" android:layout_width="0dp" android:layout_weight="1"></Button>
            <Button android:layout_height="wrap_content" android:id="@+id/button04" android:text="@string/plus_50" android:layout_width="0dp" android:layout_weight="1"></Button>
        </LinearLayout>
        <LinearLayout android:id="@+id/LinearLayout7" android:layout_height="wrap_content" android:layout_width="match_parent">
            <Button android:layout_height="wrap_content" android:id="@+id/button05" android:text="@string/minus_1000" android:layout_weight="1" android:layout_width="0dp"></Button>
            <Button android:layout_height="wrap_content" android:id="@+id/button06" android:text="@string/minus_500" android:layout_weight="1" android:layout_width="0dp"></Button>
            <Button android:layout_height="wrap_content" android:id="@+id/button07" android:text="@string/minus_100" android:layout_weight="1" android:layout_width="0dp"></Button>
            <Button android:layout_height="wrap_content" android:id="@+id/button08" android:text="@string/div_2" android:layout_weight="1" android:layout_width="0dp"></Button>
        </LinearLayout>
    </LinearLayout>
    <Button android:text="@string/reset" android:id="@+id/button_reset" android:layout_width="match_parent" android:layout_gravity="bottom" android:layout_height="wrap_content"></Button>
</LinearLayout>